Added footer icons

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1433,3 +1433,13 @@ footer .credits a {
   background: #fff;
   border: 2px solid #1f5297;
 }
+
+.social-links {
+  font-size:200%;
+}
+
+#header .profile .social-links a:hover {
+  background: #149ddd;
+  color: #fff;
+  text-decoration: none;
+}
